mention superluminar as conference host

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -147,6 +147,20 @@
 
     </div>
 
+    <div class="w-100 tc pt5 cb center">
+
+        <h4 class="black f3 fw6 tc code mt2 mb1 mb0-ns cf">Hosted by</h4>
+
+        <div class="dib-ns w-20-ns pa3 v-mid">
+
+            <a id="superluminar" class="no-underline pointer db center" href="https://superluminar.io/" target="_blank" title="Space Ape">
+                <img class="w-100-ns w-100" src="/imgs/superluminar.svg" alt="superluminar" title="superluminar" />
+            </a>
+        </div>
+
+    </div>
+
+
     <div class="w-50-ns center pa3">
         <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center cb">
             <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
