Fix busted NYCRO link.

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -134,7 +134,7 @@
         </div>
      
         <div class="dib-ns w-10-ns pa3 v-mid">
-            <a id="nycro" class="no-underline pointer db center" href="https//www.nycro.de" target="_blank" title="nycro">
+            <a id="nycro" class="no-underline pointer db center" href="https://www.nycro.de" target="_blank" title="nycro">
                 <img class="w-100-ns w-30" src="/imgs/nycro_logo_2000x500 (1).png" alt="nycro" title="nycro" />
             </a>
         </div>
