--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -52,7 +52,7 @@
                   <p class="f6 fw4">
                       During this talk, we will examine the level of situational awareness within business, why it matters and whether we can anticipate and exploit change before it hits us. We look into the changes that are occurring with the development of serverless, why now, what’s important to it, how it will change the way we do business and how this interacts with the API economy. There’s a lot of fuss about serverless, and in this session, we will try to paint a clearer picture, or at the very least, a map of where it is going.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964460657604268033">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -72,7 +72,7 @@
 
                       This talk wants to show what you better not shall do with serverless technologies, which pitfalls you should vastly avoid and how you prohibit your services from burning senseless money out of your pockets. But no worries! There will be a happy end with a bunch of hints and scenarios on how to get full bliss from our beloved Jeff &lt;3</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/codeprincess/you-shall-not-faas">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/codeprincess/you-shall-not-faas">Slides</a> | <a href="https://twitter.com/malweene/status/964460810432020480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
 
@@ -90,7 +90,7 @@
                   <p class="f6 fw4">GraphQL is an open standard that lets you request, change, and subscribe to the exact data you need in a single network request. This makes prototyping and building data-intensive applications as simple as writing a few lines of code. In this session we’ll introduce the core concepts of GraphQL and put that into practice with real-world implementations using tools such as AWS Lambda and AWS AppSync to deliver real-time collaborative experiences for web and mobile apps, using multiple data sources, managing off-line users’ data, and resolving data conflicts.</p>
                   our beloved Jeff &lt;3</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/danilop/real-time-serverless-back-ends-with-graphql">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/danilop/real-time-serverless-back-ends-with-graphql">Slides</a> | <a href="https://twitter.com/malweene/status/964460894905397248">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -117,7 +117,7 @@
                       Curious how the Event Gateway enables frictionless multi-cloud applications? Join this session to learn how.
                   </p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964461093698580480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -135,7 +135,7 @@
                       How can we make data collection and data analysis exciting, performant, and cost-effective in the Cloud?<br>
                       Alex will connect the dots around the data processing building blocks provided by AWS, without managing any servers!</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/alexcasalboni/serverless-data-warehousing-and-data-analysis-on-aws">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964461210476470272">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
