--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -213,7 +213,7 @@
                   <p class="f5 fw6 v-mid">Serverless Machine Learning</p>
                   <p class="f6 fw4">In this talk I will show how to use a sentiment analysis API to find out which of your emails should be answered first. I will also train and deploy a simple TensorFlow model that predicts the category of a new customer.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://djcordhose.github.io/ai/2018_jeffconf.html#/">Slides</a> <!-- Slides (tba) --> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
                   </p>
               </div>
           </div>
