--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -181,7 +181,7 @@
 
                       In this talk, I want to walk through what has been happening in the industry to paint a picture of platform of the future, where functions and events fit, and how to prepare your colleagues for that future. We will also see how some of those “but”s may driven by past habits, culture and legacy, and what we can do to get past those.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/sallamar/selling-serverless-to-your-colleagues">Slides</a> <!-- Slides (tba) --> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
                   </p>
               </div>
           </div>
