--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -52,7 +52,7 @@
                   <p class="f6 fw4">
                       During this talk, we will examine the level of situational awareness within business, why it matters and whether we can anticipate and exploit change before it hits us. We look into the changes that are occurring with the development of serverless, why now, what’s important to it, how it will change the way we do business and how this interacts with the API economy. There’s a lot of fuss about serverless, and in this session, we will try to paint a clearer picture, or at the very least, a map of where it is going.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964460657604268033">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/swardley/why-the-fuss-about-serverless-88107645">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964460657604268033">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -162,7 +162,7 @@
                   <p class="f5 fw6 v-mid">Conversational AI and Serverless</p>
                   <p class="f6 fw4">Conversational Interfaces are rapidly taking over the world. In this talk we’ll look at how Serverless technologies can be used for rapid chatbot development, specifically with Amazon Lex and Amazon Alexa. We’ll talk about lessons learned from my own experiences building an enterprise digital assistant, and how using a Natural Language Understanding interface changes how we think about and design our applications.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964505018761129985">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -181,7 +181,7 @@
 
                       In this talk, I want to walk through what has been happening in the industry to paint a picture of platform of the future, where functions and events fit, and how to prepare your colleagues for that future. We will also see how some of those “but”s may driven by past habits, culture and legacy, and what we can do to get past those.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/sallamar/selling-serverless-to-your-colleagues">Slides</a> <!-- Slides (tba) --> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/sallamar/selling-serverless-to-your-colleagues">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964505117058793472">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -197,7 +197,7 @@
                   <p class="f5 fw6 v-mid">Rule-based dispatching of events to a serverless services armada</p>
                   <p class="f6 fw4">Some item is changed in some database… Stuff needs to happen as an effect… Tons of downstream services might need a notification.. But which? For each individual item this is a matter of matching the item’s contents against configurable, even volatile, rules. How we make it happen.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964505226207252480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -213,7 +213,7 @@
                   <p class="f5 fw6 v-mid">Serverless Machine Learning</p>
                   <p class="f6 fw4">In this talk I will show how to use a sentiment analysis API to find out which of your emails should be answered first. I will also train and deploy a simple TensorFlow model that predicts the category of a new customer.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://djcordhose.github.io/ai/2018_jeffconf.html#/">Slides</a> <!-- Slides (tba) --> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://djcordhose.github.io/ai/2018_jeffconf.html#/">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964505306679083008">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -229,7 +229,7 @@
                   <p class="f5 fw6 v-mid">Evolutionary Serverless Architecture: From hackathon to product</p>
                   <p class="f6 fw4">A system architecture often struggles to adapt to new requirements. Serverless architectures can evolve over time because we can replace the building blocks at any time.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964505410395951104">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
