--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -256,7 +256,7 @@
                   <p class="f5 fw6 v-mid">Gotchas in Serverless Framework</p>
                   <p class="f6 fw4">Did you know it's not very hard to hit a cap of CloudFormation resources? Or that file size changes drastically when packing your code with webpack without correct settings? In this talk, you'll learn how to use Serverless Framework on a large production scale without having to figure out all these things the hard way.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://docs.google.com/presentation/d/1W7bn57LmpEbEab1ABvqpS-iUWyaZpqb9LtqndmyLJbk/edit">Slides</a> <!-- Slides (tba) --> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
                   </p>
               </div>
           </div>
