aYan Cui slides (clean)

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -352,7 +352,7 @@
                   <p class="f5 fw6 v-mid">Serverless in production, an experience report</p>
                   <p class="f6 fw4">In this talk Yan Cui shares his experience of migrating an existing monolithic architecture for a social network to AWS Lambda, and how it empowered a small team to deliver features quickly and how they address operational concerns such as CI/CD, logging, monitoring and config management.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/theburningmonk/serverless-in-production-an-experience-report-jeffconf-88207165">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
                   </p>
               </div>
           </div>
