--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -117,7 +117,7 @@
                       Curious how the Event Gateway enables frictionless multi-cloud applications? Join this session to learn how.
                   </p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964461093698580480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="https://www.slideshare.net/pmuens/using-the-event-gateway-to-build-multicloud-serverless-applications-jeffconf-hamburg-2018-88277475">Slides</a> --> Slides | <a href="https://twitter.com/malweene/status/964461093698580480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
