--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -88,7 +88,7 @@
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Real-Time Serverless Back Ends with GraphQL</p>
                   <p class="f6 fw4">GraphQL is an open standard that lets you request, change, and subscribe to the exact data you need in a single network request. This makes prototyping and building data-intensive applications as simple as writing a few lines of code. In this session we’ll introduce the core concepts of GraphQL and put that into practice with real-world implementations using tools such as AWS Lambda and AWS AppSync to deliver real-time collaborative experiences for web and mobile apps, using multiple data sources, managing off-line users’ data, and resolving data conflicts.</p>
-                  our beloved Jeff &lt;3</p>
+                  </p>
                   <p class="f6 fw4">
                     <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/danilop/real-time-serverless-back-ends-with-graphql">Slides</a> | <a href="https://twitter.com/malweene/status/964460894905397248">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
@@ -117,7 +117,7 @@
                       Curious how the Event Gateway enables frictionless multi-cloud applications? Join this session to learn how.
                   </p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="https://www.slideshare.net/pmuens/using-the-event-gateway-to-build-multicloud-serverless-applications-jeffconf-hamburg-2018-88277475">Slides</a> --> Slides | <a href="https://twitter.com/malweene/status/964461093698580480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/pmuens/using-the-event-gateway-to-build-multicloud-serverless-applications-jeffconf-hamburg-2018-88277475">Slides</a>  | <a href="https://twitter.com/malweene/status/964461093698580480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
