--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -304,7 +304,7 @@
                   <p class="f5 fw6 v-mid">Putting the F in FaaS: Functional Composition in a Serverless World</p>
                   <p class="f6 fw4">What are the best patterns for composing serverless applications? Where to look for inspiration? In this talk, Lars describes how functional programming patterns can be used for FaaS.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/trieloff/putting-the-f-in-faas">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
                   </p>
               </div>
           </div>
@@ -336,7 +336,7 @@
                   <p class="f5 fw6 v-mid">Intro to Fn: Open Source Cloud Agnostic Serverless Platform</p>
                   <p class="f6 fw4">In this lightning talk, I will demo the Fn Project, a new OSS serverless platform by the creators of IronFunctions, including Fn Flow which allows developers to build higher-order workflows in the native language of their choice (no JSON!). I will also highlight enterprise case studies of Fn in production.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/carimura/18">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
                   </p>
               </div>
           </div>
