added michaels slides

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -229,7 +229,7 @@
                   <p class="f5 fw6 v-mid">Evolutionary Serverless Architecture: From hackathon to product</p>
                   <p class="f6 fw4">A system architecture often struggles to adapt to new requirements. Serverless architectures can evolve over time because we can replace the building blocks at any time.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964505410395951104">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/michaelwittig/evolutionary-serverless-architecture">Slides</a> | <a href="https://twitter.com/malweene/status/964505410395951104">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
