added countless sketchnotes and slides

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -162,7 +162,7 @@
                   <p class="f5 fw6 v-mid">Conversational AI and Serverless</p>
                   <p class="f6 fw4">Conversational Interfaces are rapidly taking over the world. In this talk we’ll look at how Serverless technologies can be used for rapid chatbot development, specifically with Amazon Lex and Amazon Alexa. We’ll talk about lessons learned from my own experiences building an enterprise digital assistant, and how using a Natural Language Understanding interface changes how we think about and design our applications.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964505018761129985">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/virtualgill/conversational-ai-and-serverless">Slides</a> | <a href="https://twitter.com/malweene/status/964505018761129985">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -256,7 +256,7 @@
                   <p class="f5 fw6 v-mid">Gotchas in Serverless Framework</p>
                   <p class="f6 fw4">Did you know it's not very hard to hit a cap of CloudFormation resources? Or that file size changes drastically when packing your code with webpack without correct settings? In this talk, you'll learn how to use Serverless Framework on a large production scale without having to figure out all these things the hard way.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://docs.google.com/presentation/d/1W7bn57LmpEbEab1ABvqpS-iUWyaZpqb9LtqndmyLJbk/edit">Slides</a> <!-- Slides (tba) --> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://docs.google.com/presentation/d/1W7bn57LmpEbEab1ABvqpS-iUWyaZpqb9LtqndmyLJbk/edit">Slides</a> <!-- Slides (tba) --> |  <a href="https://twitter.com/malweene/status/964550744694317056">Sketchnotes</a> --> Sketchnotes
                   </p>
               </div>
           </div>
@@ -272,7 +272,7 @@
                   <p class="f5 fw6 v-mid">Live Coding: A Serverless Platform in 100 lines</p>
                   <p class="f6 fw4">I will build and demonstrate a working serverless platform, without using any existing serverless framework, live on stage. In implementing FaaS I will demonstrate the core components, features, and challenges of architecting and using various serverless platforms.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://github.com/beardedfoo/scrappy-serverless">Github</a> | <a href="https://twitter.com/malweene/status/964550846720741376">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -288,7 +288,7 @@
                   <p class="f5 fw6 v-mid">Managing Serverless Development</p>
                   <p class="f6 fw4">Serverless is still an emerging space, and many people are trying to push current management practices into the serverless space. Does this work? Is there a better way? What lessons can we learn from this emergent space?</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/padajo/managing-serverless-development-1">Slides</a> | <a href="https://twitter.com/malweene/status/964551142595276801">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -304,7 +304,7 @@
                   <p class="f5 fw6 v-mid">Putting the F in FaaS: Functional Composition in a Serverless World</p>
                   <p class="f6 fw4">What are the best patterns for composing serverless applications? Where to look for inspiration? In this talk, Lars describes how functional programming patterns can be used for FaaS.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/trieloff/putting-the-f-in-faas">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/trieloff/putting-the-f-in-faas">Slides</a> | <a href="https://twitter.com/malweene/status/964551368450166787">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -320,7 +320,7 @@
                   <p class="f5 fw6 v-mid">Serverless Wordpress</p>
                   <p class="f6 fw4">I will showcase migrating a (semi-) high traffic WP site from a costly server to AWS Lightsail & server-side rendering React app on Serverless framework. It's faster and more secure but at the same time the customer doesn’t have to compromise on their favourite editor, WordPress.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964551529394032640">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -336,7 +336,7 @@
                   <p class="f5 fw6 v-mid">Intro to Fn: Open Source Cloud Agnostic Serverless Platform</p>
                   <p class="f6 fw4">In this lightning talk, I will demo the Fn Project, a new OSS serverless platform by the creators of IronFunctions, including Fn Flow which allows developers to build higher-order workflows in the native language of their choice (no JSON!). I will also highlight enterprise case studies of Fn in production.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/carimura/18">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/carimura/18">Slides</a> | <a href="https://twitter.com/malweene/status/964551630841577474">Sketchnotes</a>
                   </p>
               </div>
           </div>
