added daniels slides

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -197,7 +197,7 @@
                   <p class="f5 fw6 v-mid">Rule-based dispatching of events to a serverless services armada</p>
                   <p class="f6 fw4">Some item is changed in some database… Stuff needs to happen as an effect… Tons of downstream services might need a notification.. But which? For each individual item this is a matter of matching the item’s contents against configurable, even volatile, rules. How we make it happen.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964505226207252480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://de.slideshare.net/DanielBuchholz3/rulebased-dispatching-of-events-to-a-serverless-services-armada">Slides</a> | <a href="https://twitter.com/malweene/status/964505226207252480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
