--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -320,7 +320,7 @@
                   <p class="f5 fw6 v-mid">Serverless Wordpress</p>
                   <p class="f6 fw4">I will showcase migrating a (semi-) high traffic WP site from a costly server to AWS Lightsail & server-side rendering React app on Serverless framework. It's faster and more secure but at the same time the customer doesn’t have to compromise on their favourite editor, WordPress.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <!-- <a href="xxxxx">Slides</a> --> Slides (tba) | <a href="https://twitter.com/malweene/status/964551529394032640">Sketchnotes</a>
+                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://docs.google.com/presentation/d/1lCvqOBk6ZymJfevdnmgF1t3rMKry6TbP0V3GSz1d3jA/edit#slide=id.p3">Slides</a> | <a href="https://twitter.com/malweene/status/964551529394032640">Sketchnotes</a>
                   </p>
               </div>
           </div>
