--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -52,7 +52,7 @@
                   <p class="f6 fw4">
                       During this talk, we will examine the level of situational awareness within business, why it matters and whether we can anticipate and exploit change before it hits us. We look into the changes that are occurring with the development of serverless, why now, what’s important to it, how it will change the way we do business and how this interacts with the API economy. There’s a lot of fuss about serverless, and in this session, we will try to paint a clearer picture, or at the very least, a map of where it is going.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/swardley/why-the-fuss-about-serverless-88107645">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964460657604268033">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/SPsaqiegOP4">Video</a> | <a href="https://www.slideshare.net/swardley/why-the-fuss-about-serverless-88107645">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964460657604268033">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -72,7 +72,7 @@
 
                       This talk wants to show what you better not shall do with serverless technologies, which pitfalls you should vastly avoid and how you prohibit your services from burning senseless money out of your pockets. But no worries! There will be a happy end with a bunch of hints and scenarios on how to get full bliss from our beloved Jeff &lt;3</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/codeprincess/you-shall-not-faas">Slides</a> | <a href="https://twitter.com/malweene/status/964460810432020480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/0KN9mtppFhc">Video</a> | <a href="https://speakerdeck.com/codeprincess/you-shall-not-faas">Slides</a> | <a href="https://twitter.com/malweene/status/964460810432020480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
 
@@ -90,7 +90,7 @@
                   <p class="f6 fw4">GraphQL is an open standard that lets you request, change, and subscribe to the exact data you need in a single network request. This makes prototyping and building data-intensive applications as simple as writing a few lines of code. In this session we’ll introduce the core concepts of GraphQL and put that into practice with real-world implementations using tools such as AWS Lambda and AWS AppSync to deliver real-time collaborative experiences for web and mobile apps, using multiple data sources, managing off-line users’ data, and resolving data conflicts.</p>
                   </p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/danilop/real-time-serverless-back-ends-with-graphql">Slides</a> | <a href="https://twitter.com/malweene/status/964460894905397248">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/u_sBNMCWpVA">Video</a> | <a href="https://speakerdeck.com/danilop/real-time-serverless-back-ends-with-graphql">Slides</a> | <a href="https://twitter.com/malweene/status/964460894905397248">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -117,7 +117,7 @@
                       Curious how the Event Gateway enables frictionless multi-cloud applications? Join this session to learn how.
                   </p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/pmuens/using-the-event-gateway-to-build-multicloud-serverless-applications-jeffconf-hamburg-2018-88277475">Slides</a>  | <a href="https://twitter.com/malweene/status/964461093698580480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/h1PIqbi93eE">Video</a> | <a href="https://www.slideshare.net/pmuens/using-the-event-gateway-to-build-multicloud-serverless-applications-jeffconf-hamburg-2018-88277475">Slides</a>  | <a href="https://twitter.com/malweene/status/964461093698580480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -135,7 +135,7 @@
                       How can we make data collection and data analysis exciting, performant, and cost-effective in the Cloud?<br>
                       Alex will connect the dots around the data processing building blocks provided by AWS, without managing any servers!</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/alexcasalboni/serverless-data-warehousing-and-data-analysis-on-aws">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964461210476470272">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/gSj9RdnnMKk">Video</a> | <a href="https://speakerdeck.com/alexcasalboni/serverless-data-warehousing-and-data-analysis-on-aws">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964461210476470272">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -162,7 +162,7 @@
                   <p class="f5 fw6 v-mid">Conversational AI and Serverless</p>
                   <p class="f6 fw4">Conversational Interfaces are rapidly taking over the world. In this talk we’ll look at how Serverless technologies can be used for rapid chatbot development, specifically with Amazon Lex and Amazon Alexa. We’ll talk about lessons learned from my own experiences building an enterprise digital assistant, and how using a Natural Language Understanding interface changes how we think about and design our applications.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/virtualgill/conversational-ai-and-serverless">Slides</a> | <a href="https://twitter.com/malweene/status/964505018761129985">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/Z7Fcz756vMQ">Video</a> | <a href="https://speakerdeck.com/virtualgill/conversational-ai-and-serverless">Slides</a> | <a href="https://twitter.com/malweene/status/964505018761129985">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -181,7 +181,7 @@
 
                       In this talk, I want to walk through what has been happening in the industry to paint a picture of platform of the future, where functions and events fit, and how to prepare your colleagues for that future. We will also see how some of those “but”s may driven by past habits, culture and legacy, and what we can do to get past those.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/sallamar/selling-serverless-to-your-colleagues">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964505117058793472">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/Wf-e-siaYKA">Video</a> | <a href="https://www.slideshare.net/sallamar/selling-serverless-to-your-colleagues">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964505117058793472">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -197,7 +197,7 @@
                   <p class="f5 fw6 v-mid">Rule-based dispatching of events to a serverless services armada</p>
                   <p class="f6 fw4">Some item is changed in some database… Stuff needs to happen as an effect… Tons of downstream services might need a notification.. But which? For each individual item this is a matter of matching the item’s contents against configurable, even volatile, rules. How we make it happen.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://de.slideshare.net/DanielBuchholz3/rulebased-dispatching-of-events-to-a-serverless-services-armada">Slides</a> | <a href="https://twitter.com/malweene/status/964505226207252480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/1Xyv7vBpbcI">Video</a> | <a href="https://de.slideshare.net/DanielBuchholz3/rulebased-dispatching-of-events-to-a-serverless-services-armada">Slides</a> | <a href="https://twitter.com/malweene/status/964505226207252480">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -213,7 +213,7 @@
                   <p class="f5 fw6 v-mid">Serverless Machine Learning</p>
                   <p class="f6 fw4">In this talk I will show how to use a sentiment analysis API to find out which of your emails should be answered first. I will also train and deploy a simple TensorFlow model that predicts the category of a new customer.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://djcordhose.github.io/ai/2018_jeffconf.html#/">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964505306679083008">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/SaM9PzJ99Hs">Video</a> | <a href="https://djcordhose.github.io/ai/2018_jeffconf.html#/">Slides</a> <!-- Slides (tba) --> | <a href="https://twitter.com/malweene/status/964505306679083008">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -229,7 +229,7 @@
                   <p class="f5 fw6 v-mid">Evolutionary Serverless Architecture: From hackathon to product</p>
                   <p class="f6 fw4">A system architecture often struggles to adapt to new requirements. Serverless architectures can evolve over time because we can replace the building blocks at any time.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/michaelwittig/evolutionary-serverless-architecture">Slides</a> | <a href="https://twitter.com/malweene/status/964505410395951104">Sketchnotes</a> <!-- Sketchnotes (tba) -->
+                    <a href="https://youtu.be/KR-cZkLu3ck">Video</a> | <a href="https://speakerdeck.com/michaelwittig/evolutionary-serverless-architecture">Slides</a> | <a href="https://twitter.com/malweene/status/964505410395951104">Sketchnotes</a> <!-- Sketchnotes (tba) -->
                   </p>
               </div>
           </div>
@@ -256,7 +256,7 @@
                   <p class="f5 fw6 v-mid">Gotchas in Serverless Framework</p>
                   <p class="f6 fw4">Did you know it's not very hard to hit a cap of CloudFormation resources? Or that file size changes drastically when packing your code with webpack without correct settings? In this talk, you'll learn how to use Serverless Framework on a large production scale without having to figure out all these things the hard way.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://docs.google.com/presentation/d/1W7bn57LmpEbEab1ABvqpS-iUWyaZpqb9LtqndmyLJbk/edit">Slides</a> <!-- Slides (tba) --> |  <a href="https://twitter.com/malweene/status/964550744694317056">Sketchnotes</a> --> Sketchnotes
+                    <a href="https://youtu.be/uXStZfMkbJs">Video</a> | <a href="https://docs.google.com/presentation/d/1W7bn57LmpEbEab1ABvqpS-iUWyaZpqb9LtqndmyLJbk/edit">Slides</a> <!-- Slides (tba) --> |  <a href="https://twitter.com/malweene/status/964550744694317056">Sketchnotes</a> --> Sketchnotes
                   </p>
               </div>
           </div>
@@ -272,7 +272,7 @@
                   <p class="f5 fw6 v-mid">Live Coding: A Serverless Platform in 100 lines</p>
                   <p class="f6 fw4">I will build and demonstrate a working serverless platform, without using any existing serverless framework, live on stage. In implementing FaaS I will demonstrate the core components, features, and challenges of architecting and using various serverless platforms.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://github.com/beardedfoo/scrappy-serverless">Github</a> | <a href="https://twitter.com/malweene/status/964550846720741376">Sketchnotes</a>
+                    <a href="https://youtu.be/irhBIidenOE">Video</a> | <a href="https://github.com/beardedfoo/scrappy-serverless">Github</a> | <a href="https://twitter.com/malweene/status/964550846720741376">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -288,7 +288,7 @@
                   <p class="f5 fw6 v-mid">Managing Serverless Development</p>
                   <p class="f6 fw4">Serverless is still an emerging space, and many people are trying to push current management practices into the serverless space. Does this work? Is there a better way? What lessons can we learn from this emergent space?</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/padajo/managing-serverless-development-1">Slides</a> | <a href="https://twitter.com/malweene/status/964551142595276801">Sketchnotes</a>
+                    <a href="https://youtu.be/Ueab3oQUbVY">Video</a> | <a href="https://speakerdeck.com/padajo/managing-serverless-development-1">Slides</a> | <a href="https://twitter.com/malweene/status/964551142595276801">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -304,7 +304,7 @@
                   <p class="f5 fw6 v-mid">Putting the F in FaaS: Functional Composition in a Serverless World</p>
                   <p class="f6 fw4">What are the best patterns for composing serverless applications? Where to look for inspiration? In this talk, Lars describes how functional programming patterns can be used for FaaS.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/trieloff/putting-the-f-in-faas">Slides</a> | <a href="https://twitter.com/malweene/status/964551368450166787">Sketchnotes</a>
+                    <a href="https://youtu.be/5onnYmFcG6M">Video</a> | <a href="https://speakerdeck.com/trieloff/putting-the-f-in-faas">Slides</a> | <a href="https://twitter.com/malweene/status/964551368450166787">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -320,7 +320,7 @@
                   <p class="f5 fw6 v-mid">Serverless Wordpress</p>
                   <p class="f6 fw4">I will showcase migrating a (semi-) high traffic WP site from a costly server to AWS Lightsail & server-side rendering React app on Serverless framework. It's faster and more secure but at the same time the customer doesn’t have to compromise on their favourite editor, WordPress.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://docs.google.com/presentation/d/1lCvqOBk6ZymJfevdnmgF1t3rMKry6TbP0V3GSz1d3jA/edit#slide=id.p3">Slides</a> | <a href="https://twitter.com/malweene/status/964551529394032640">Sketchnotes</a>
+                    <a href="https://youtu.be/wX-WCSrmCZc">Video</a> | <a href="https://docs.google.com/presentation/d/1lCvqOBk6ZymJfevdnmgF1t3rMKry6TbP0V3GSz1d3jA/edit#slide=id.p3">Slides</a> | <a href="https://twitter.com/malweene/status/964551529394032640">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -336,7 +336,7 @@
                   <p class="f5 fw6 v-mid">Intro to Fn: Open Source Cloud Agnostic Serverless Platform</p>
                   <p class="f6 fw4">In this lightning talk, I will demo the Fn Project, a new OSS serverless platform by the creators of IronFunctions, including Fn Flow which allows developers to build higher-order workflows in the native language of their choice (no JSON!). I will also highlight enterprise case studies of Fn in production.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://speakerdeck.com/carimura/18">Slides</a> | <a href="https://twitter.com/malweene/status/964551630841577474">Sketchnotes</a>
+                    <a href="https://youtu.be/LMAARp5y1uM">Video</a> | <a href="https://speakerdeck.com/carimura/18">Slides</a> | <a href="https://twitter.com/malweene/status/964551630841577474">Sketchnotes</a>
                   </p>
               </div>
           </div>
@@ -352,7 +352,7 @@
                   <p class="f5 fw6 v-mid">Serverless in production, an experience report</p>
                   <p class="f6 fw4">In this talk Yan Cui shares his experience of migrating an existing monolithic architecture for a social network to AWS Lambda, and how it empowered a small team to deliver features quickly and how they address operational concerns such as CI/CD, logging, monitoring and config management.</p>
                   <p class="f6 fw4">
-                    <!-- <a href="xxxxxxx">Video</a> --> Video (tba) | <a href="https://www.slideshare.net/theburningmonk/serverless-in-production-an-experience-report-jeffconf-88207165">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
+                    <a href="https://youtu.be/oF4XAdydk9o">Video</a> | <a href="https://www.slideshare.net/theburningmonk/serverless-in-production-an-experience-report-jeffconf-88207165">Slides</a> | <!-- <a href="xxxxxx">Sketchnotes</a> --> Sketchnotes (tba)
                   </p>
               </div>
           </div>
