Link to ServerlessDays

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -10,46 +10,14 @@
 
     <div class="cf center dt-ns ph3 ph0-ns">
       <div class="dt-row-ns">
-
-        <article onclick="changePage('venue')" class="dtc-ns black-60 mv1 mv4-ns w-100 w-33-ns mw5 center pointer">
-          <img src="/imgs/altonaer-museum-small.jpg" class="db w-100 dim" alt="JeffConf Hamburg 2017 Venue" height="143" />
-          <div class="pa2 ph3-ns pb3-ns hamburg-red-bg flag-bg-container">
-            <h3 class="mb0 mt1">
-              <span class="fw6 f5 f4-ns mv0 white underline-hover" >Venue</span>
-            </h3>
-            <p class="f6 lh-copy measure mt2 white-90" >
-              Altonaer Museum Hamburg is a mix of tradition and modernity in Hamburg, and an iconic location to spread cultural ideas.
-            </p>
+          <img src="/imgs/ALL-NEW_ALL-DIFFERENT.png" class="db dim" alt="JeffConf Hamburg 2017 Venue"/>
           </div>
-        </article>
-
-        <article onclick="changePage('tickets')" class="dtc-ns black-60 mv1 mv4-ns w-100 w-33-ns mw5 center pointer">
-          <img src="/imgs/tickets.jpg" class="db w-100 dim" alt="JeffConf Hamburg Tickets" height="143" />
-          <div class="pa2 ph3-ns pb3-ns it-white-bg flag-bg-container bb b--gray">
-            <h3 class="mb0 mt1">
-              <span class="fw6 f5 f4-ns mv0 underline-hover" >Tickets</span>
-            </h3>
-            <p class="f6 lh-copy measure mt2 mid-gray"
-               >
-              Tickets are reasonably priced from €35 to make sure JeffConf Hamburg is financially accessible for the community.
-            </p>
-          </div>
-        </article>
-
-        <article onclick="changePage('speakers')" class="dtc-ns black-60 mv1 mv4-ns w-100 w-33-ns mw5 center pointer">
-          <img src="/imgs/speakers.jpg" class="db w-100 dim" alt="JeffConf Speakers" height="143" />
-          <div class="pa2 ph3-ns pb3-ns hamburg-red-bg flag-bg-container">
-            <h3 class="mb0 mt1">
-              <span class="fw6 f5 f4-ns mv0 white underline-hover" >Speakers</span>
-            </h3>
-            <p class="f6 lh-copy measure mt2 white-90 no-underline"
-               >
-              Real users showcasing the problems they&#39;ve solved using serverless platforms. Focus is learning through sharing.
-            </p>
-          </div>
-        </article>
       </div>
     </div>
+          <div class="mw5 mw7-ns center bg-light-gray pa3 ph5-ns">
+              New event: <a href="https://hamburg.serverlessdays.io">ServerlessDays 2019</a>
+          </div>
+
 
     <!-- Begin MailChimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
