redirect hamburg.jeffconf.com to hamburg.serverlessdays.io

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,3 +1,4 @@
+<meta http-equiv="refresh" content="1; url=https://hamburg.serverlessdays.io/">
 <div id="home" class="dtc w-100">
   <div class="tc tl-ns">
     <div class="black mw6 mw8-ns tc center ph3 ph0-ns">
